--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,3 +183,60 @@ footer {
     width: 100%;
     height: 80px;
 }
+
+@media only screen and (max-width: 1040px) {
+#main-container {
+    width: 90%;
+}
+}
+
+
+@media only screen and (max-width: 840px) {
+.work {
+    width: 400px;
+    height: auto;
+}
+.work img {
+    width: 400px;
+    height: auto;
+}
+}
+
+@media only screen and (max-width: 540px) {
+    #topbar {
+        position: static;
+    }
+
+    #bio-img {
+        width: 100%;
+        height: auto;
+        display: block;
+        margin-bottom: 24px;
+    }
+
+    #logo {
+        display: block;
+        width: 100%;
+    }
+
+    nav {
+        display: block;
+        width: 100%;
+        text-align: center;
+
+    }
+
+    .work {
+        width: 100%;
+        height: auto;
+    }
+
+    .work img {
+        width: 100%;
+        height: auto;
+    }
+
+    input[type=submit] {
+        width: 80px;
+    }
+}
