--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,25 +184,33 @@ footer {
     height: 80px;
 }
 
-@media only screen and (max-width: 1040px) {
+@media only screen and (max-width: 980px) {
 #main-container {
     width: 90%;
 }
-}
-
-
-@media only screen and (max-width: 840px) {
 .work {
-    width: 400px;
+    width: 500px;
     height: auto;
 }
 .work img {
-    width: 400px;
+    width: 500px;
     height: auto;
 }
 }
 
-@media only screen and (max-width: 540px) {
+
+@media only screen and (max-width: 768px) {
+.work {
+    width: 500px;
+    height: auto;
+}
+.work img {
+    width: 500px;
+    height: auto;
+}
+}
+
+@media only screen and (max-width: 640px) {
     #topbar {
         position: static;
     }
@@ -237,6 +245,6 @@ footer {
     }
 
     input[type=submit] {
-        width: 80px;
+        width: 100px;
     }
 }
